--- a/login_signup.html
+++ b/login_signup.html
@@ -39,6 +39,35 @@
 <body>
     <!-- 위에 설명된 공통 스크립트 삽입 -->
     <script>
+      // **여기에 위에서 복사한 배포된 Apps Script 웹 앱의 "/exec" URL을 붙여넣으세요!**
+      const APPS_SCRIPT_API_URL = 'https://script.google.com/macros/s/AKfycbygkULD-hX5Yf7IB9DNhm1nvhHnxPv6a4vZe1fm7Y9Ehi1MVs416BO70PHAVgPjqAA8/exec'; 
+
+      function navigateTo(page, params = '') {
+          let url = 'https://sgwcrong.github.io/trafficday/'; 
+          switch (page) {
+              case 'index': url += 'index.html'; break;
+              case 'about': url += 'about.html'; break;
+              case 'login_signup': url += 'login_signup.html'; break;
+              case 'mypage': url += 'mypage.html'; break;
+              case 'admin': url += 'admin.html'; break;
+              default: console.error('알 수 없는 페이지:', page); return;
+          }
+          if (params) { url += '?' + params; }
+          window.location.href = url;
+      }
+
+      async function callAppsScript(functionName, data = {}) {
+          try {
+              const response = await fetch(APPS_SCRIPT_API_URL, {
+                  method: 'POST', headers: { 'Content-Type': 'application/json' },
+                  body: JSON.stringify({ functionName, data })
+              });
+              return await response.json();
+          } catch (error) {
+              console.error('Apps Script API 호출 중 오류 발생:', error);
+              throw new Error('서버와 통신하는 중 오류가 발생했습니다. (' + error.message + ')');
+          }
+      }
       const APPS_SCRIPT_API_URL = 'https://script.google.com/macros/s/AKfycbxRhhcxyskRSUJRIB76nqZrQwUak0WIBVUdigc2yZ88MitDkjWUdlS-SiPFb4qHTnBo/exec'; // <<--- 실제 URL로 변경!
       // navigateTo, callAppsScript 함수들...
       function navigateTo(page, params = '') { /* ... 코드 생략 ... */ }
@@ -46,6 +75,31 @@
     </script>
     <!-- ... 기존 HTML 내용 (body, container 등) ... -->
     <div class="container">
+        <ul class="nav nav-tabs mb-4" id="myTab" role="tablist">
+            <li class="nav-item" role="presentation">
+                <button class="nav-link active" id="login-tab" data-bs-toggle="tab" data-bs-target="#login" type="button" role="tab" aria-controls="login" aria-selected="true">로그인</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="register-tab" data-bs-toggle="tab" data-bs-target="#register" type="button" role="tab" aria-controls="register" aria-selected="false">회원가입</button>
+            </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+            <!-- 로그인 탭 -->
+            <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
+                <h2>로그인</h2>
+                <form id="loginForm">
+                    <div class="mb-3">
+                        <label for="loginId" class="form-label">아이디</label>
+                        <input type="text" class="form-control" id="loginId" name="id" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="loginPassword" class="form-label">비밀번호</label>
+                        <input type="password" class="form-control" id="loginPassword" name="password" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100 mb-2">로그인</button>
+                    <button type="button" class="btn btn-outline-secondary w-100" onclick="navigateTo('index')">취소</button>
+                </form>
+            </div>
         <!-- ... 기존 로그인/회원가입 탭 구조 ... -->
         <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
             <h2>로그인</h2>
@@ -56,6 +110,48 @@
             </form>
         </div>
 
+            <!-- 회원가입 탭 -->
+            <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
+                <h2>회원가입</h2>
+                <form id="registerForm">
+                    <div class="mb-3">
+                        <label for="name" class="form-label">이름</label>
+                        <input type="text" class="form-control" id="name" name="name" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="birthdate" class="form-label">생년월일</label>
+                        <input type="date" class="form-control" id="birthdate" name="birthdate" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="nickname" class="form-label">닉네임</label>
+                        <input type="text" class="form-control" id="nickname" name="nickname" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="regId" class="form-label">아이디</label>
+                        <input type="text" class="form-control" id="regId" name="id" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">이메일</label>
+                        <input type="email" class="form-control" id="email" name="email" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="regPassword" class="form-label">비밀번호</label>
+                        <input type="password" class="form-control" id="regPassword" name="password" required>
+                        <div class="form-text">8자 이상, 영문, 숫자, 특수문자를 포함해주세요.</div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="confirmPassword" class="form-label">비밀번호 확인</label>
+                        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="securityCode" class="form-label">보안 코드</label>
+                        <input type="text" class="form-control" id="securityCode" name="securityCode" required>
+                        <div class="form-text">재설정 시 필요한 보안 질문에 대한 답변입니다.</div>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100 mb-2">회원가입</button>
+                    <button type="button" class="btn btn-outline-secondary w-100" onclick="navigateTo('index')">취소</button>
+                </form>
+            </div>
         <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
             <h2>회원가입</h2>
             <form id="registerForm">
@@ -70,6 +166,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
+            // URL 파라미터 확인 (예: ?tab=register)
             const urlParams = new URLSearchParams(window.location.search);
             if (urlParams.get('tab') === 'register') {
                 const registerTab = new bootstrap.Tab(document.getElementById('register-tab'));
@@ -100,9 +197,10 @@
             };
 
             try {
+                const response = await callAppsScript('processRegister', formData);
                 // Apps Script의 processRegister 함수 호출
                 const response = await callAppsScript('processRegister', formData); // callAppsScript로 호출 방식 변경
-                
+
                 if (response.success) {
                     alert(response.message + ' 환영합니다, ' + response.id + '님!');
                     const loginTab = new bootstrap.Tab(document.getElementById('login-tab'));
@@ -126,6 +224,7 @@
             };
 
             try {
+                const response = await callAppsScript('processLogin', formData);
                 // Apps Script의 processLogin 함수 호출
                 const response = await callAppsScript('processLogin', formData); // callAppsScript로 호출 방식 변경
 
