--- a/index.html
+++ b/index.html
@@ -3,138 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>교통-DAY: 교통덕후들을 위한 행사</title>
+    <title>교통-DAY:희망이 함께 하는 교통</title>
+    <!-- 부트스트랩 CSS 링크 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
-        .hero-section { background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://via.placeholder.com/1920x1080/4682B4/FFFFFF?text=Traffic-DAY+Event') no-repeat center center; background-size: cover; background-position: center; color: white; padding: 120px 0; text-align: center; }
-        .hero-section h1 { font-size: 4.5rem; margin-bottom: 25px; text-shadow: 2px 2px 4px rgba(0,0,0,0.7); }
-        .hero-section p { font-size: 1.5rem; margin-bottom: 50px; max-width: 900px; margin-left: auto; margin-right: auto; text-shadow: 1px 1px 3px rgba(0,0,0,0.5); }
-        .hero-section .btn { font-size: 1.8rem; padding: 18px 35px; border-radius: 50px; transition: all 0.3s ease; }
-        .hero-section .btn:hover { transform: translateY(-3px); box-shadow: 0 5px 15px rgba(0,0,0,0.3); }
-        .section-padding { padding: 80px 0; }
-        .event-intro { background-color: #f8f9fa; }
-        .program-card { border: none; box-shadow: 0 0 20px rgba(0,0,0,0.05); transition: all 0.3s ease; }
-        .program-card:hover { transform: translateY(-5px); box-shadow: 0 0 25px rgba(0,0,0,0.1); }
-        .program-card .card-icon { font-size: 3rem; color: #007bff; margin-bottom: 15px; }
-        .cta-section { background-color: #007bff; color: white; padding: 100px 0; text-align: center; }
-        .cta-section h2 { font-size: 3rem; margin-bottom: 30px; }
-        .cta-section .btn { font-size: 1.5rem; padding: 15px 40px; border-radius: 30px; background-color: white; color: #007bff; border: none; }
-        .cta-section .btn:hover { background-color: #e2e6ea; }
-        footer { padding: 40px 0; background-color: #343a40; color: #adb5bd; text-align: center; font-size: 0.9rem; }
-        footer a { color: #adb5bd; text-decoration: none; }
-        footer a:hover { color: white; }
+        /* 히어로 섹션 스타일 추가 */
+        .hero-section {
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://via.placeholder.com/1500x500/007bff/ffffff?text=Your+Awesome+Background+Image') no-repeat center center;
+            /* 위 이미지 URL을 주인님이 원하는 멋진 이미지로 변경해주세요! */
+            background-size: cover;
+            color: white;
+            padding: 100px 0; /* 상하 패딩 */
+            text-align: center;
+        }
+        .hero-section h1 {
+            font-size: 3.5rem; /* 제목 크기 */
+            margin-bottom: 20px;
+        }
+        .hero-section p {
+            font-size: 1.25rem; /* 문단 크기 */
+            margin-bottom: 40px;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .hero-section .btn {
+            font-size: 1.5rem; /* 버튼 크기 */
+            padding: 15px 30px;
+            border-radius: 50px; /* 버튼 모서리 둥글게 */
+        }
     </style>
 </head>
 <body>
-    <!-- 공통 스크립트 (APPS_SCRIPT_API_URL 설정 및 navigateTo, callAppsScript 함수 포함) -->
-    <script>
-      const APPS_SCRIPT_API_URL = 'https://script.google.com/macros/s/AKfycbxE3u9aSh1N2GeOLnQ6r2zaXK3cs5Q9Kpdp7uMifC6Q-NW916S9nV9Yp54GLLrK5hEx/exec'; // <<<--- 중요! 실제 URL로 변경 필수!
-      function navigateTo(page, params = '') { /* ... 공통 스크립트 내용 ... */
-          let url = 'http://trafficday.kro.kr/'; 
-          switch (page) {
-              case 'index': url += 'index.html'; break;
-              case 'about': url += 'about.html'; break;
-              case 'lookup': url += 'lookup.html'; break;
-              case 'mypage': url += 'mypage.html'; break;
-              default: console.error('클라이언트: 알 수 없는 페이지 요청 -', page); return;
-          }
-          if (params) { url += '?' + params; }
-          window.location.href = url;
-      }
-      async function callAppsScript(functionName, data = {}) { /* ... 공통 스크립트 내용 ... */
-          try {
-              const response = await fetch(APPS_SCRIPT_API_URL, {
-                  method: 'POST',
-                  headers: { 'Content-Type': 'application/json' },
-                  body: JSON.stringify({ functionName, data }) 
-              });
-              if (!response.ok) { 
-                  const errorBody = await response.text(); 
-                  console.error('클라이언트: HTTP Error response body:', errorBody);
-                  throw new Error(`HTTP 통신 실패: ${response.status} ${response.statusText}. 서버 응답: ${errorBody}`);
-              }
-              return await response.json(); 
-          } catch (error) {
-              console.error('클라이언트: Apps Script API 호출 중 치명적 오류 발생:', error);
-              throw new Error('네트워크 또는 클라이언트 측 오류: ' + error.message);
-          }
-      }
-    </script>
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="javascript:void(0)" onclick="navigateTo('index')">교통-DAY</a>
+            <a class="navbar-brand" href="#">교통-DAY</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="javascript:void(0)" onclick="navigateTo('index')">홈</a>
+                        <a class="nav-link active" aria-current="page" href="#">홈</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0)" onclick="navigateTo('about')">소개</a>
+                        <a class="nav-link" href="#">소개</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            행사 정보
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            방문예약하기
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#program">주요 프로그램</a></li> 
-                            <li><a class="dropdown-item" href="#location">장소 및 시간</a></li>
+                            <li><a class="dropdown-item" href="#">할로윈 교통 in Busan</a></li>
+                            <li><a class="dropdown-item" href="#">산타 diving 부산교통</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">교통-DAY 웹툰</a></li>
+                            <li><a class="dropdown-item" href="#">기타 서비스</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">커뮤니티</a>
+                     <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            서비스
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">서비스 1</a></li>
+                            <li><a class="dropdown-item" href="#">서비스 2</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">기타 서비스</a></li>
+                        </ul>
                     </li>
                 </ul>
-                <div class="d-flex" id="authButtons">
-                    <button id="lookupBtn" class="btn btn-outline-light me-2" onclick="navigateTo('lookup')">조회하기</button>
-                    <button id="mypageBtn" class="btn btn-outline-light me-2 d-none" onclick="navigateTo('mypage')">나의 정보</button>
-                    <button id="logoutBtn" class="btn btn-danger d-none">조회해제</button>
-                </div>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="검색" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">검색</button>
+                </form>
             </div>
         </div>
     </nav>
 
+    <!-- 히어로 섹션 시작 -->
     <header class="hero-section">
         <div class="container">
-            <h1 class="display-3">교통-DAY: 교통덕후들을 위한 성대한 축제!(사이트 점검 중 입니다!)</h1>
+            <h1 class="display-3">주인님의 환상적인 웹사이트에 오신 것을 환영합니다!</h1>
             <p class="lead">
-                기차, 버스, 지하철... 이 모든 것을 사랑하는 당신을 위한 단 하루의 특별한 행사!
-                다양한 체험과 정보, 그리고 교통덕후 친구들을 만나보세요!(사이트 점검 중!)
+                방문자님을 사로잡을 멋진 메시지로 웹사이트의 가치를 전달하세요.
+                여기에 웹사이트의 핵심 가치나 목표를 간결하게 표현할 수 있습니다.
             </p>
-            <a href="javascript:void(0)" onclick="navigateTo('lookup')" class="btn btn-primary btn-lg">지금 바로 조회하기</a>
+            <a href="#" class="btn btn-primary btn-lg">지금 시작하기</a>
+            <!-- CTA 버튼 -->
         </div>
     </header>
+    <!-- 히어로 섹션 끝 -->
 
-    <section id="about" class="event-intro section-padding">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6 text-center mb-4 mb-lg-0">
-                    <img src="https://via.placeholder.com/500x300/6A5ACD/FFFFFF?text=Traffic+Fan+Gathering" alt="교통덕후 행사" class="img-fluid rounded shadow">
-                </div>
-                <div class="col-lg-6">
-                    <h2 class="mb-3 fw-bold">교통덕후들을 위한 지상 최대의 축제!</h2>
-                    <p class="lead">
-                        '교통-DAY'는 교통에 대한 깊은 열정과 지식을 가진 모든 덕후들을 위해 마련된 특별한 행사입니다. 
-                        같은 관심사를 가진 사람들과 교류하며, 새로운 정보를 얻고, 잊지 못할 추억을 만들어갈 수 있어요.
-                    </p>
-                    <p>
-                        최신 교통 기술 동향부터 역사적인 교통수단의 이야기까지, 
-                        다채로운 프로그램들이 여러분을 기다립니다. 
-                        교통의 세계에 푹 빠져들 준비되셨나요?
-                    </p>
-                    <a href="javascript:void(0)" onclick="navigateTo('about')" class="btn btn-outline-primary mt-3">더 자세히 알아보기 <i class="bi bi-arrow-right"></i></a>
-                </div>
-            </div>
-        </div>
-    </section>
+    <div class="container mt-5">
+        <h2>여기에 다른 섹션 내용이 이어집니다.</h2>
+        <p>히어로 섹션이 잘 구현되었는지 확인해보세요!</p>
+        <p>이어서 웹사이트의 다양한 정보나 기능을 추가할 수 있습니다.</p>
+    </div>
 
-    <section id="program" class="section-padding">
+     <section id="program" class="section-padding">
         <div class="container">
             <h2 class="text-center mb-5 fw-bold">주요 프로그램</h2>
             <div class="row text-center">
@@ -190,48 +156,7 @@
             </p>
         </div>
     </footer>
-
+    <!-- 부트스트랩 JS 링크 (</body> 태그 직전에 위치하는 것이 좋아요!) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    <script>
-        function updateAuthButtons() {
-            const hasLookedUp = localStorage.getItem('userLookedUp'); // 'yes' or null
-            const lookupBtn = document.getElementById('lookupBtn');
-            const mypageBtn = document.getElementById('mypageBtn');
-            const logoutBtn = document.getElementById('logoutBtn');
-
-            if (lookupBtn && mypageBtn && logoutBtn) { // 버튼 요소가 존재하는지 확인
-                if (hasLookedUp === 'yes') { 
-                    lookupBtn.classList.add('d-none');
-                    mypageBtn.classList.remove('d-none');
-                    logoutBtn.classList.remove('d-none');
-                } else { 
-                    lookupBtn.classList.remove('d-none');
-                    mypageBtn.classList.add('d-none');
-                    logoutBtn.classList.add('d-none');
-                }
-            } else {
-                console.error("인증 관련 버튼 요소를 찾을 수 없습니다. (index.html)");
-            }
-        }
-        
-        document.addEventListener('DOMContentLoaded', function() {
-            updateAuthButtons();
-
-            const logoutBtnElement = document.getElementById('logoutBtn');
-            if (logoutBtnElement) { 
-                logoutBtnElement.addEventListener('click', function() {
-                    localStorage.removeItem('userLookedUp'); 
-                    localStorage.removeItem('userLookupId'); 
-                    localStorage.removeItem('userLookupPersonalCode'); 
-                    localStorage.removeItem('userLookupName'); 
-                    localStorage.removeItem('userLookupPoints'); 
-                    localStorage.removeItem('userLookupCoins');
-                    alert('조회 상태가 해제되었습니다. 다시 정보를 조회해주세요.');
-                    navigateTo('index');
-                });
-            }
-        });
-    </script>
 </body>
 </html>
-
