--- a/index.html
+++ b/index.html
@@ -3,160 +3,189 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>교통-DAY:희망이 함께 하는 교통</title>
-    <!-- 부트스트랩 CSS 링크 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <title>교통-DAY</title>
+    <!-- 부트스트랩 CSS 추가 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- 만약 여기에 주인님이 만든 CSS 파일이 있다면 추가해줘 -->
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <style>
-        /* 히어로 섹션 스타일 추가 */
-        .hero-section {
-            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://via.placeholder.com/1500x500/007bff/ffffff?text=Your+Awesome+Background+Image') no-repeat center center;
-            /* 위 이미지 URL을 주인님이 원하는 멋진 이미지로 변경해주세요! */
-            background-size: cover;
-            color: white;
-            padding: 100px 0; /* 상하 패딩 */
-            text-align: center;
+        /* CSS 시작: 가로 스크롤 및 카드 스타일 */
+        .horizontal-scroll-container {
+            overflow-x: auto; /* 가로 스크롤 활성화 */
+            white-space: nowrap; /* 카드들이 한 줄로 이어지게 */
+            padding-bottom: 1rem; /* 스크롤바를 위한 공간 */
+            scrollbar-width: thin; /* Firefox 스크롤바 */
+            scrollbar-color: #a0a0a0 #f1f1f1; /* Firefox 스크롤바 색상 */
         }
-        .hero-section h1 {
-            font-size: 3.5rem; /* 제목 크기 */
-            margin-bottom: 20px;
+
+        .horizontal-scroll-container::-webkit-scrollbar {
+            height: 8px; /* 웹킷 브라우저 스크롤바 높이 */
         }
-        .hero-section p {
-            font-size: 1.25rem; /* 문단 크기 */
-            margin-bottom: 40px;
-            max-width: 800px;
-            margin-left: auto;
-            margin-right: auto;
+
+        .horizontal-scroll-container::-webkit-scrollbar-thumb {
+            background-color: #a0a0a0; /* 스크롤바 핸들 색상 */
+            border-radius: 4px;
         }
-        .hero-section .btn {
-            font-size: 1.5rem; /* 버튼 크기 */
-            padding: 15px 30px;
-            border-radius: 50px; /* 버튼 모서리 둥글게 */
+
+        .horizontal-scroll-container::-webkit-scrollbar-track {
+            background-color: #f1f1f1; /* 스크롤바 트랙 색상 */
         }
+
+        .event-cards-wrapper {
+            display: flex;
+            flex-wrap: nowrap; /* 카드들이 줄 바꿈 되지 않도록 */
+        }
+
+        .event-card {
+            flex: 0 0 auto; /* 카드들이 줄어들거나 늘어나지 않도록 */
+            width: 300px; /* 카드의 고정 너비 */
+            min-width: 280px; /* 반응형을 위한 최소 너비 */
+            margin-right: 15px; /* 카드 사이 간격 */
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out; /* 호버 애니메이션 준비 */
+        }
+        .event-card:hover {
+            transform: translateY(-5px); /* 호버 시 약간 위로 올라오는 효과 */
+            box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important; /* 호버 시 그림자 강조 */
+        }
+        /* CSS 끝 */
+
+        /* 스크롤 시 나타나는 애니메이션 시작 */
+        .animate-on-scroll {
+            opacity: 0;
+            transform: translateY(20px); /* 처음엔 살짝 아래에 위치 */
+            transition: opacity 0.8s ease-out, transform 0.8s ease-out; /* 애니메이션 시간 및 속도 */
+        }
+
+        .animate-on-scroll.is-visible {
+            opacity: 1;
+            transform: translateY(0); /* 스크롤 시 원래 위치로 이동 */
+        }
+        /* 스크롤 시 나타나는 애니메이션 끝 */
+
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+    <!-- 내비게이션 바 (로그인/회원가입 버튼 포함) -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">교통-DAY</a>
+            <a class="navbar-brand" href="index.html">교통-DAY</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">홈</a>
+                        <a class="nav-link" href="소개.html">소개</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">소개</a>
+                        <a class="nav-link" href="lookup.html">예약 조회</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            방문예약하기
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">할로윈 교통 in Busan</a></li>
-                            <li><a class="dropdown-item" href="#">산타 diving 부산교통</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">기타 서비스</a></li>
-                        </ul>
-                    </li>
-                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            서비스
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">서비스 1</a></li>
-                            <li><a class="dropdown-item" href="#">서비스 2</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">기타 서비스</a></li>
-                        </ul>
-                    </li>
+                    <!-- 기존에 있던 다른 메뉴 아이템들도 여기에 추가하면 돼 -->
                 </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="검색" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">검색</button>
-                </form>
+                <div class="d-flex">
+                    <a href="로그인_페이지_링크.html" class="btn btn-outline-primary me-2">로그인</a>
+                    <a href="회원가입_페이지_링크.html" class="btn btn-primary">회원가입</a>
+                </div>
             </div>
         </div>
     </nav>
 
-    <!-- 히어로 섹션 시작 -->
-    <header class="hero-section">
-        <div class="container">
-            <h1 class="display-3">주인님의 환상적인 웹사이트에 오신 것을 환영합니다!</h1>
-            <p class="lead">
-                방문자님을 사로잡을 멋진 메시지로 웹사이트의 가치를 전달하세요.
-                여기에 웹사이트의 핵심 가치나 목표를 간결하게 표현할 수 있습니다.
-            </p>
-            <a href="#" class="btn btn-primary btn-lg">지금 시작하기</a>
-            <!-- CTA 버튼 -->
+    <!-- 메인 컨텐츠 영역 -->
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-12">
+                <h1>교통덕후들을 위한 행사, 교통-DAY</h1>
+                <p class="lead">교통에 대한 모든 것을 경험해보세요!</p>
+                <p>주인님, 교통-DAY 홈페이지에 오신 것을 환영해요! 다양한 교통 관련 행사와 정보들을 만나보세요.</p>
+                <button class="btn btn-success btn-lg mb-5">행사 예약하기</button>
+            </div>
         </div>
-    </header>
-    <!-- 히어로 섹션 끝 -->
-
-    <div class="container mt-5">
-        <h2>여기에 다른 섹션 내용이 이어집니다.</h2>
-        <p>히어로 섹션이 잘 구현되었는지 확인해보세요!</p>
-        <p>이어서 웹사이트의 다양한 정보나 기능을 추가할 수 있습니다.</p>
     </div>
 
-     <section id="program" class="section-padding">
-        <div class="container">
-            <h2 class="text-center mb-5 fw-bold">주요 프로그램</h2>
-            <div class="row text-center">
-                <div class="col-md-4 mb-4">
-                    <div class="card h-100 program-card">
-                        <div class="card-body">
-                            <i class="bi bi-train-front card-icon"></i>
-                            <h5 class="card-title fw-bold">철도 시뮬레이터 체험</h5>
-                            <p class="card-text">기관사가 되어 실제와 같은 열차 운행을 경험해보세요!</p>
-                        </div>
+    <!-- 추가된 부분 시작: 옆으로 스크롤 가능한 행사 설명 카드 섹션 -->
+    <section class="container my-5">
+        <h2 class="text-center mb-4 animate-on-scroll">다가오는 특별한 교통 행사!</h2>
+        <div class="horizontal-scroll-container">
+            <div class="d-flex flex-nowrap event-cards-wrapper">
+                <!-- 행사 카드 1 -->
+                <div class="card event-card mx-2 shadow-sm animate-on-scroll">
+                    <img src="https://via.placeholder.com/300x200?text=Event+Image+1" class="card-img-top" alt="행사 이미지">
+                    <div class="card-body">
+                        <h5 class="card-title">부산발 할로윈 행사</h5>
+                        <p class="card-text">으스스하지만 신나는 교통 체험! 10월 마지막 주말.</p>
+                        <a href="부산발할로윈행방문예약폼.html" class="btn btn-primary">자세히 보기</a>
                     </div>
                 </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card h-100 program-card">
-                        <div class="card-body">
-                            <i class="bi bi-bus-front card-icon"></i>
-                            <h5 class="card-title fw-bold">버스 모델 전시회</h5>
-                            <p class="card-text">희귀한 버스 모델부터 최신형 전기 버스까지 한눈에!</p>
-                        </div>
+                <!-- 행사 카드 2 -->
+                <div class="card event-card mx-2 shadow-sm animate-on-scroll">
+                    <img src="https://via.placeholder.com/300x200?text=Event+Image+2" class="card-img-top" alt="행사 이미지">
+                    <div class="card-body">
+                        <h5 class="card-title">버스 매니아의 날</h5>
+                        <p class="card-text">다양한 버스들을 한자리에서 만나보세요! 2025년 8월.</p>
+                        <a href="#" class="btn btn-primary">자세히 보기</a>
                     </div>
                 </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card h-100 program-card">
-                        <div class="card-body">
-                            <i class="bi bi-geo-alt card-icon"></i>
-                            <h5 class="card-title fw-bold">교통 덕후 강연 및 토크</h5>
-                            <p class="card-text">전문가와 유명 덕후들의 흥미진진한 강연과 대화의 시간.</p>
-                        </div>
+                <!-- 행사 카드 3 -->
+                <div class="card event-card mx-2 shadow-sm animate-on-scroll">
+                    <img src="https://via.placeholder.com/300x200?text=Event+Image+3" class="card-img-top" alt="행사 이미지">
+                    <div class="card-body">
+                        <h5 class="card-title">기차 여행 박람회</h5>
+                        <p class="card-text">낭만적인 기차 여행, 미리 계획하세요! 2025년 11월.</p>
+                        <a href="#" class="btn btn-primary">자세히 보기</a>
                     </div>
                 </div>
-            </div>
-            <div class="text-center mt-4">
-                <a href="#" class="btn btn-info btn-lg">모든 프로그램 확인하기</a> 
+                <!-- 행사 카드 4 -->
+                <div class="card event-card mx-2 shadow-sm animate-on-scroll">
+                    <img src="https://via.placeholder.com/300x200?text=Event+Image+4" class="card-img-top" alt="행사 이미지">
+                    <div class="card-body">
+                        <h5 class="card-title">선박의 모든 것</h5>
+                        <p class="card-text">항구에서 만나는 거대한 선박의 세계! 2026년 2월.</p>
+                        <a href="#" class="btn btn-primary">자세히 보기</a>
+                    </div>
+                </div>
+                <!-- 더 많은 카드 추가 가능 -->
             </div>
         </div>
     </section>
+    <!-- 추가된 부분 끝 -->
 
-    <section class="cta-section">
-        <div class="container">
-            <h2>지금 바로 교통-DAY에 참여하세요!</h2>
-            <p>교통을 사랑하는 당신에게 잊지 못할 경험을 선사할 거예요.</p>
-            <a href="javascript:void(0)" onclick="navigateTo('lookup')" class="btn btn-light btn-lg mt-3">무료 조회하기 <i class="bi bi-chevron-right"></i></a>
-        </div>
-    </section>
 
-    <footer>
+    <!-- 추가된 부분 시작: 푸터 -->
+    <footer class="bg-light text-center py-4 mt-5">
         <div class="container">
-            <p>&copy; 2025 교통-DAY. All rights reserved.</p>
-            <p>
-                <a href="#">이용약관</a> | 
-                <a href="#">개인정보처리방침</a> | 
-                <a href="#">문의하기</a>
-            </p>
+            <p class="text-muted mb-0">&copy; 2025 교통-DAY. 모든 권리 보유.</p>
+            <p class="text-muted mb-0">연락처: 추후제공</p>
         </div>
     </footer>
-    <!-- 부트스트랩 JS 링크 (</body> 태그 직전에 위치하는 것이 좋아요!) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <!-- 추가된 부분 끝 -->
+
+
+    <!-- 부트스트랩 JS 추가 (반응형 메뉴 등 동작을 위해 필요해) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <!-- 스크롤 시 나타나는 애니메이션을 위한 JavaScript -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const animateElements = document.querySelectorAll('.animate-on-scroll');
+
+            const observer = new IntersectionObserver((entries, observer) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.classList.add('is-visible');
+                        observer.unobserve(entry.target); // 한 번 보이면 더 이상 관찰하지 않도록
+                    }
+                });
+            }, {
+                root: null, // 뷰포트
+                rootMargin: '0px',
+                threshold: 0.2 // 요소의 20%가 보일 때 작동
+            });
+
+            animateElements.forEach(element => {
+                observer.observe(element);
+            });
+        });
+    </script>
 </body>
 </html>
